[gd_scene load_steps=12 format=2]

[ext_resource path="res://Scenes/MainMenu/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://Entities/Sentinel.tscn" type="PackedScene" id=2]
[ext_resource path="res://Entities/Components/Treads/Treads.tscn" type="PackedScene" id=3]
[ext_resource path="res://Entities/Components/Sensor/Sensor.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/Fonts/NunitoTitle.tres" type="DynamicFont" id=5]
[ext_resource path="res://Assets/Fonts/NunitoBodyBold.tres" type="DynamicFont" id=6]
[ext_resource path="res://Assets/Fonts/NunitoHeader.tres" type="DynamicFont" id=7]
[ext_resource path="res://Scenes/Shared/SaveGameList.tscn" type="PackedScene" id=8]

[sub_resource type="GDScript" id=1]
script/source = "extends Button



func _on_Play_pressed():
	SceneManager.go_to_level_1()
"

[sub_resource type="GDScript" id=3]
script/source = "extends Button


func _on_SaveGameList_file_selected(fileName, fileNameActual, filePath):
	disabled = false


func _on_SaveGameList_list_empty():
	disabled = true
"

[sub_resource type="GDScript" id=2]
script/source = "extends Button


func _on_SaveGameList_file_selected(fileName, fileNameActual, filePath):
	disabled = false


func _on_SaveGameList_list_empty():
	disabled = true
"

[node name="MainMenu" type="Spatial"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.89955, 4.83448, 4.19871 )
script = ExtResource( 1 )

[node name="Sentinel" parent="." instance=ExtResource( 2 )]
transform = Transform( 0.458283, 0, 0.655726, 0, 0.8, 0, -0.655726, 0, 0.458283, -3.63615, -3.72361, -4.978 )
notReprogrammable = true

[node name="TreadBase" parent="Sentinel/AttachmentContainer/Base" index="0" instance=ExtResource( 3 )]

[node name="SensorHead" parent="Sentinel/AttachmentContainer/Head" index="0" instance=ExtResource( 4 )]

[node name="Camera" type="Camera" parent="."]
transform = Transform( 0.985071, -0.0897111, 0.146926, 0.00654332, 0.872376, 0.488792, -0.172025, -0.480533, 0.859939, -0.721324, -1.46668, -2.1674 )
current = true

[node name="Menus" type="CanvasLayer" parent="."]

[node name="MainMenu" type="Panel" parent="Menus"]
editor/display_folded = true
anchor_left = 0.45
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/MainMenu"]
anchor_left = 0.2
anchor_right = 0.8
anchor_bottom = 1.0
margin_top = 40.0
margin_bottom = -80.0
alignment = 1

[node name="Title" type="Label" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 11.0
margin_right = 432.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 5 )
text = "Sentinel"
align = 1
valign = 1

[node name="Spacer" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 81.0
margin_right = 432.0
margin_bottom = 121.0
rect_min_size = Vector2( 0, 40 )

[node name="NewGameContainer" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 125.0
margin_right = 432.0
margin_bottom = 175.0
rect_min_size = Vector2( 0, 50 )

[node name="NewGame" type="Button" parent="Menus/MainMenu/VBoxContainer/NewGameContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Start Challenges"

[node name="Spacer4" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 179.0
margin_right = 432.0
margin_bottom = 219.0
rect_min_size = Vector2( 0, 40 )

[node name="LevelSelectContainer" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 223.0
margin_right = 432.0
margin_bottom = 273.0
rect_min_size = Vector2( 0, 50 )

[node name="LevelSelect" type="Button" parent="Menus/MainMenu/VBoxContainer/LevelSelectContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Select Challenge"

[node name="Spacer2" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 277.0
margin_right = 432.0
margin_bottom = 317.0
rect_min_size = Vector2( 0, 40 )

[node name="LoadGameContainer" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 321.0
margin_right = 432.0
margin_bottom = 371.0
rect_min_size = Vector2( 0, 50 )

[node name="LoadGameMenu" type="Button" parent="Menus/MainMenu/VBoxContainer/LoadGameContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Load Challenge"

[node name="Spacer3" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 375.0
margin_right = 432.0
margin_bottom = 415.0
rect_min_size = Vector2( 0, 40 )

[node name="QuitGameContainer" type="Control" parent="Menus/MainMenu/VBoxContainer"]
margin_top = 419.0
margin_right = 432.0
margin_bottom = 469.0
rect_min_size = Vector2( 0, 50 )

[node name="QuitGame" type="Button" parent="Menus/MainMenu/VBoxContainer/QuitGameContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = ExtResource( 6 )
text = "Quit Game"

[node name="LevelSelect" type="Panel" parent="Menus"]
visible = false
anchor_left = 0.45
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8

[node name="Title" type="Label" parent="Menus/LevelSelect"]
anchor_right = 1.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 5 )
text = "Challenge Select"
align = 1
valign = 1

[node name="ScrollContainer" type="ScrollContainer" parent="Menus/LevelSelect"]
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 66.0
margin_bottom = -70.0

[node name="VBoxContainer" type="VBoxContainer" parent="Menus/LevelSelect/ScrollContainer"]
margin_right = 720.0
margin_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LevelContainer" type="Control" parent="Menus/LevelSelect/ScrollContainer/VBoxContainer"]
margin_right = 720.0
margin_bottom = 100.0
rect_min_size = Vector2( 0, 100 )

[node name="Title" type="Label" parent="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer"]
margin_left = 20.0
margin_top = 7.0
margin_right = 77.0
margin_bottom = 41.0
custom_fonts/font = ExtResource( 7 )
text = "Righty Tighty"

[node name="Description" type="Label" parent="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer"]
anchor_right = 1.0
margin_left = 20.0
margin_top = 41.0
margin_right = -220.0
margin_bottom = 90.0
custom_fonts/font = ExtResource( 6 )
text = "You have one goal, with a twist: Escape!
Concepts: Functions"
autowrap = true

[node name="Play" type="Button" parent="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -200.0
margin_top = 10.0
margin_right = -20.0
margin_bottom = -10.0
custom_fonts/font = ExtResource( 6 )
text = "Play"
script = SubResource( 1 )

[node name="HSeparator" type="HSeparator" parent="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -4.0

[node name="Back" type="Button" parent="Menus/LevelSelect"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = 240.0
margin_bottom = -10.0
text = "Back"

[node name="LoadLevel" type="Panel" parent="Menus"]
visible = false
anchor_left = 0.45
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.8

[node name="Title" type="Label" parent="Menus/LoadLevel"]
anchor_right = 1.0
margin_bottom = 66.0
custom_fonts/font = ExtResource( 5 )
text = "Load Challenge"
align = 1
valign = 1

[node name="SaveGameList" parent="Menus/LoadLevel" instance=ExtResource( 8 )]
margin_top = 66.0
margin_bottom = -70.0

[node name="HBoxContainer" type="HBoxContainer" parent="Menus/LoadLevel"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = -60.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Back" type="Button" parent="Menus/LoadLevel/HBoxContainer"]
margin_right = 230.0
margin_bottom = 50.0
size_flags_horizontal = 3
text = "Back"

[node name="Delete" type="Button" parent="Menus/LoadLevel/HBoxContainer"]
margin_left = 234.0
margin_right = 464.0
margin_bottom = 50.0
size_flags_horizontal = 3
disabled = true
text = "Delete"
script = SubResource( 3 )

[node name="LoadLevel" type="Button" parent="Menus/LoadLevel/HBoxContainer"]
margin_left = 468.0
margin_right = 700.0
margin_bottom = 50.0
size_flags_horizontal = 3
disabled = true
text = "Load Game"
script = SubResource( 2 )
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/NewGameContainer/NewGame" to="." method="_on_NewGame_pressed"]
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/LevelSelectContainer/LevelSelect" to="." method="_on_LevelSelect_pressed"]
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/LoadGameContainer/LoadGameMenu" to="." method="_on_LoadGameMenu_pressed"]
[connection signal="pressed" from="Menus/MainMenu/VBoxContainer/QuitGameContainer/QuitGame" to="." method="_on_QuitGame_pressed"]
[connection signal="pressed" from="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer/Play" to="Menus/LevelSelect/ScrollContainer/VBoxContainer/LevelContainer/Play" method="_on_Play_pressed"]
[connection signal="pressed" from="Menus/LevelSelect/Back" to="." method="_on_Back_pressed"]
[connection signal="file_chosen" from="Menus/LoadLevel/SaveGameList" to="." method="_on_load_game"]
[connection signal="file_selected" from="Menus/LoadLevel/SaveGameList" to="Menus/LoadLevel/HBoxContainer/Delete" method="_on_SaveGameList_file_selected"]
[connection signal="file_selected" from="Menus/LoadLevel/SaveGameList" to="Menus/LoadLevel/HBoxContainer/LoadLevel" method="_on_SaveGameList_file_selected"]
[connection signal="file_selected" from="Menus/LoadLevel/SaveGameList" to="." method="_on_SaveGameList_file_selected"]
[connection signal="list_empty" from="Menus/LoadLevel/SaveGameList" to="Menus/LoadLevel/HBoxContainer/Delete" method="_on_SaveGameList_list_empty"]
[connection signal="list_empty" from="Menus/LoadLevel/SaveGameList" to="Menus/LoadLevel/HBoxContainer/LoadLevel" method="_on_SaveGameList_list_empty"]
[connection signal="pressed" from="Menus/LoadLevel/HBoxContainer/Back" to="." method="_on_Back_pressed"]
[connection signal="pressed" from="Menus/LoadLevel/HBoxContainer/Delete" to="." method="_on_Delete_pressed"]
[connection signal="pressed" from="Menus/LoadLevel/HBoxContainer/LoadLevel" to="." method="_on_load_game"]

[editable path="Sentinel"]
